--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"nope\""
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "devDependencies": {
     "@types/node": "^22.15.16",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@netlify/functions": "^3.1.5"
   }
 }
