--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@netlify/functions": "^3.1.5"
-  }
+    "@netlify/functions": "^3.1.5",
+    "firebase": "^11.7.1"
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
